--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6 {
    font-weight: 700;
    letter-spacing: 1px;
    text-transform: uppercase;
-   color: #11245A;
+   color: #ED2024;
 }
 
 .title-sm {
