--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6 {
    font-weight: 700;
    letter-spacing: 1px;
    text-transform: uppercase;
-   color: #ED2024;
+   color: #11245A;
 }
 
 .title-sm {
@@ -48,7 +48,7 @@ section {
 .logo-text {
    font-size: 22px;
    text-transform: uppercase;
-   color: #11245A !important;
+   color: #ED2024 !important;
 }
 .navbar .nav-link {
    font-size: 12px;
