--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ section {
 .logo-text2 {
    font-size: 22px;
    text-transform: uppercase;
-   color: #ED2024 !important;
+   color: #181818 !important;
 }
 .navbar .nav-link {
    font-size: 12px;
