--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ section {
    font-size: 22px;
    text-transform: uppercase;
    color: #ED2024 !important;
+   margin: 2px;
 }
 .logo-text2 {
    font-size: 22px;
@@ -60,7 +61,6 @@ section {
    text-transform: uppercase;
    letter-spacing: 1px;
 }
-
 
 .navbar-light .navbar-nav .nav-link.active {
    color: #E93B81;
