--- a/css/style.css
+++ b/css/style.css
@@ -280,9 +280,11 @@ form .form-control:focus {
    background-color: #E93B81;
 }
 
+# grid
+
 .grid {
   display: grid;
-  width: 114em;
+  width: 80em;
   grid-gap: 6rem;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   align-items: start;
