--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,16 @@ form .form-control:focus {
 
 # grid
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
 .grid {
   display: grid;
   width: 114em;
@@ -359,6 +369,18 @@ form .form-control:focus {
 .card-btn:active span {
   margin-left: 1.5rem;
 }
+
+@media only screen and (max-width: 60em) {
+  body {
+    padding: 3rem;
+  }
+
+  .grid {
+    grid-gap: 3rem;
+  }
+}
+
+# footer
 
 .footer-top {
    padding-top: 80px;
