--- a/layouts/header2.html
+++ b/layouts/header2.html
@@ -28,19 +28,19 @@
           <ul class="navbar-nav ms-auto">
 
              <li class="nav-item">
-              <a class="nav-link" href="index.php">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="index.php#project">Project</a>
+               <a class="nav-link" href="index.html#project">Project</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="index.php#roadmap">Roadmap</a>
+               <a class="nav-link" href="index.html#roadmap">Roadmap</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="index.php#partners">Partners</a>
+               <a class="nav-link" href="index.html#partners">Partners</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="index.php#contact">CONTACT US</a>
+               <a class="nav-link" href="index.html#contact">CONTACT US</a>
              </li>
           </ul>
         </div>
